# tonio

./: .gitignore  Config.in  README.md  external.desc  external.mk
.github/workflows/: build_images.yml  test_tonio.yml  test_toniod.yml.yml  tonio.yml
board/: raspberrypi3
board/raspberrypi/: config_0w.txt  config_3.txt  flash-root.sh  flash-single.sh  flash.sh  genimage-raspberrypi0w.cfg  genimage-raspberrypi3.cfg  genimage.cfg.in  linux.config  linux.mini.config  linux_3.config  post-build.sh  post-image.sh
board/raspberrypi/patches/opus/: 0001-celt-arm-don-t-use-vcvtaq_s32_f32-on-32-bit-systems.patch
board/raspberrypi/rootfs_overlay/etc/: dnsmasq.conf  hostapd.conf  tonio.conf  tonio.conf.sample  wpa_supplicant.conf.sample
board/raspberrypi/rootfs_overlay/etc/default/: tonio
board/raspberrypi/rootfs_overlay/etc/init.d/: S39apsetup  S41apsetup
board/raspberrypi/rootfs_overlay/etc/network/: interfaces.sample
board/raspberrypi3/: genimage-raspberrypi3.cfg  linux.config  post-build.sh  post-image.sh  tonio-post-image.sh
board/raspberrypi3/rootfs_overlay/etc/: hostapd.conf  wpa_supplicant.conf.sample
board/raspberrypi3/rootfs_overlay/etc/default/: syslogd  tonio
board/raspberrypi3/rootfs_overlay/etc/init.d/: S11expandroot  S90hostapd  resizefs
board/raspberrypi3/rootfs_overlay/etc/network/: interfaces.sample
configs/: tonio_pi3_defconfig  tonio_raspberrypi0w_defconfig  tonio_raspberrypi3_defconfig
docs/: Build-from-sources.md  Home.md  Quick-Start.md  Reference-Assembly.md  User-guide.md
package/tonio/: Config.in  S15tonio  tonio.mk
package/tonio/tonio-1.0/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  config.h.in  configure.ac  index.html
package/tonio/tonio-1.0/src/: CMakeLists.txt  Makefile.am  http.c  http.h  input.c  input.h  json.c  json.h  media.c  media.h  media_opus.c  media_vlc.c  mfrc522.c  mfrc522.h  mfrc522_hal_linux.c  tonio.c  tonio.h  volume_mapping.c  volume_mapping.h
package/tonio/tonio-1.0/tests/: CMakeLists.txt  Makefile.am  check_json.c
package/tonio/tonio-1.0/www/: CMakeLists.txt  Makefile.am  common.js  index.html  lib.js  log.js  settings.js  setup.js  status.js  tonio.css  tonio.js
